<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".presentation.activities.InfoActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/btn_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/horizontal_space"
        android:layout_marginVertical="@dimen/vertical_space"
        android:background="@drawable/shape_rectangle_white"
        android:orientation="vertical"
        android:paddingTop="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_create_board_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textSize="20sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="v1.0.0"
                android:textSize="12sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingHorizontal="10dp"
            android:scrollbarSize="0dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textfrist"
                    android:textAlignment="center"
                    android:textSize="11sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:srcCompat="@drawable/board_6x6" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textsecond"
                    android:textAlignment="center"
                    android:textSize="11sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/shuffle_mode_1" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textthird"
                    android:textAlignment="center"
                    android:textSize="11sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/block_mode" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textforth"
                    android:textAlignment="center"
                    android:textSize="11sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/shuffle_mode_3" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textfive"
                    android:textAlignment="center"
                    android:textSize="11sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/board_4x4" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textsix"
                    android:textAlignment="center"
                    android:textSize="11sp" />


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_close_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="7dp"
            android:background="@drawable/rectangle_red"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingHorizontal="60dp"
            android:paddingVertical="7dp"
            android:text="@string/close"
            android:textColor="@android:color/white"
            android:textSize="17sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>