<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AboutActivity">


    <RelativeLayout
        android:id="@+id/btn_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/about_margin"
        android:background="@drawable/shape_rectangle_white"
        android:paddingVertical="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_close_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_17sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_create_board_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/app_name"
                        android:textColor="@color/txt_color"
                        android:textSize="@dimen/large_txt" />

                    <TextView
                        android:id="@+id/version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="v1.0.0"
                        android:textColor="@color/txt_color"
                        android:textSize="@dimen/mid_txt" />
                </LinearLayout>


                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:scrollbarSize="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textfrist"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/textfrist"
                            android:textAlignment="center"
                            android:textColor="@color/txt_color"
                              android:textSize="@dimen/small_txt" />

                        <ImageView
                            android:id="@+id/fristimg"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_250sdp"
                            app:srcCompat="@drawable/board_6x6" />

                        <TextView
                            android:id="@+id/textsecond"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/textsecond"
                            android:textAlignment="center"
                            android:textColor="@color/txt_color"
                              android:textSize="@dimen/small_txt" />

                        <ImageView
                            android:id="@+id/secondimg"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_250sdp"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/shuffle_mode_1" />

                        <TextView
                            android:id="@+id/textThird"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/textthird"
                            android:textAlignment="center"
                            android:textColor="@color/txt_color"
                              android:textSize="@dimen/small_txt" />

                        <ImageView
                            android:id="@+id/thirdimg"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_250sdp"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/block_mode" />

                        <TextView
                            android:id="@+id/textforth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/textforth"
                            android:textAlignment="center"
                            android:textColor="@color/txt_color"
                              android:textSize="@dimen/small_txt" />

                        <ImageView
                            android:id="@+id/forthimg"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_250sdp"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/shuffle_mode_3" />

                        <TextView
                            android:id="@+id/textfifth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/textfive"
                            android:textAlignment="center"
                            android:textColor="@color/txt_color"
                              android:textSize="@dimen/small_txt" />

                        <ImageView
                            android:id="@+id/fiveimg"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_250sdp"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/board_4x4" />

                        <TextView
                            android:id="@+id/textsix"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/textsix"
                            android:textAlignment="center"
                            android:textColor="@color/txt_color"
                              android:textSize="@dimen/small_txt" />

                        <TextView
                            android:id="@+id/textseven"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="50dp"
                            android:gravity="center"
                            android:text="@string/developer"
                            android:textColor="@color/txt_color"
                            android:textSize="15sp" />


                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_close_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/rectangle_red"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_45sdp"
        android:paddingVertical="@dimen/_7sdp"
        android:text="@string/close"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/small_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_linear_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>